--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<!--
+ * @Description: 
+ * @Author: 唐健峰
+ * @Date: 2023-07-16 23:11:38
+ * @LastEditors: ${author}
+ * @LastEditTime: 2023-07-16 23:36:52
+-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
